@@ -352,8 +352,17 @@ DCS_SOUNDROM6x("su2-sl1.rom",CRC(141d280e) SHA1(ab1e8e38b9fa0e693837c93616f0821e
                "corvsnd7",CRC(1417b547) SHA1(851acf77159a1ef99fc2934353eb887065568004))
 WPC_ROMEND
 
+WPC_ROMSTART(corv,px3,"u6-px3.rom",0x80000,CRC(5a363db8) SHA1(19eea89bf1ab3cc84c5b67eac00d8be4e65249f6))
+DCS_SOUNDROM6x("su2-sp2.rom",CRC(9ae4bf31) SHA1(a33978d9ac8ffdc7b8719c803edd3e804f0dd886),
+               "corvsnd3",CRC(6ace0353) SHA1(dec5b6f129ee6b7c0d03c1677d6b71672dd25a5a),
+               "corvsnd4",CRC(87807278) SHA1(ba01b44c0ad6d10163a8aed2211539d541e69449),
+               "corvsnd5",CRC(35f82c21) SHA1(ee14489e5629e9cd5622a56849fab65b94ff9b59),
+               "corvsnd6",CRC(61e56d90) SHA1(41388523fca4839132d3f7e117bdac9ea9f4020c),
+               "corvsnd7",CRC(1417b547) SHA1(851acf77159a1ef99fc2934353eb887065568004))
+WPC_ROMEND
+
 WPC_ROMSTART(corv,px4,"u6-px4.rom",0x80000,CRC(a5f22149) SHA1(e0b0bce31b1e66e6b74930c3184f87ebec400f80))
-DCS_SOUNDROM6x("corvsnd2",CRC(630d20a3) SHA1(c7b6cbc7f23c1f9c149a3ef32e84ca8797ff8026),
+DCS_SOUNDROM6x("su2-sl1.rom",CRC(141d280e) SHA1(ab1e8e38b9fa0e693837c93616f0821e25b31588),
                "corvsnd3",CRC(6ace0353) SHA1(dec5b6f129ee6b7c0d03c1677d6b71672dd25a5a),
                "corvsnd4",CRC(87807278) SHA1(ba01b44c0ad6d10163a8aed2211539d541e69449),
                "corvsnd5",CRC(35f82c21) SHA1(ee14489e5629e9cd5622a56849fab65b94ff9b59),
@@ -362,7 +371,7 @@ DCS_SOUNDROM6x("corvsnd2",CRC(630d20a3) SHA1(c7b6cbc7f23c1f9c149a3ef32e84ca8797f
 WPC_ROMEND
 
 WPC_ROMSTART(corv,px5,"u6-px5.rom",0x80000,CRC(0ef08f29) SHA1(0b7cd1283bfe90a4720736e93992cb8437769b4e))
-DCS_SOUNDROM6x("corvsnd2",CRC(630d20a3) SHA1(c7b6cbc7f23c1f9c149a3ef32e84ca8797ff8026),
+DCS_SOUNDROM6x("su2-sl1.rom",CRC(141d280e) SHA1(ab1e8e38b9fa0e693837c93616f0821e25b31588),
                "corvsnd3",CRC(6ace0353) SHA1(dec5b6f129ee6b7c0d03c1677d6b71672dd25a5a),
                "corvsnd4",CRC(87807278) SHA1(ba01b44c0ad6d10163a8aed2211539d541e69449),
                "corvsnd5",CRC(35f82c21) SHA1(ee14489e5629e9cd5622a56849fab65b94ff9b59),
@@ -383,8 +392,9 @@ WPC_ROMEND
 /  Game drivers
 /---------------*/
 CORE_GAMEDEF(corv,21,"Corvette (2.1)",1994,"Bally",wpc_mSecurityS,0)
+CORE_CLONEDEF(corv,px3,21,"Corvette (PX-3 Prototype)",1994,"Bally",wpc_mSecurityS,0)
 CORE_CLONEDEF(corv,px4,21,"Corvette (PX-4 Prototype)",1994,"Bally",wpc_mSecurityS,0)
-CORE_CLONEDEF(corv,px5,21,"Corvette (PX-5 LED Ghost Fix)",1994,"Bally",wpc_mSecurityS,0)
+CORE_CLONEDEF(corv,px5,21,"Corvette (PX-5 Prototype LED Ghost Fix)",1994,"Bally",wpc_mSecurityS,0) // = PX-4 with LED Ghost Fix
 CORE_CLONEDEF(corv,la1,21,"Corvette (LA-1)",1994,"Bally",wpc_mSecurityS,0)
 CORE_CLONEDEF(corv,lx1,21,"Corvette (LX-1)",1994,"Bally",wpc_mSecurityS,0)
 CORE_CLONEDEF(corv,dx1,21,"Corvette (DX-1 LED Ghost Fix)",1994,"Bally",wpc_mSecurityS,0)
